# opencv_workshop

./: .gitignore  CMakeLists.txt  README.md  install.sh
samples/: CMakeLists.txt  sample_01.cpp  sample_02.cpp  valgrind.txt
